# mcp-gateway

./: .gitignore  .pre-commit-config.yaml  LICENSE  Makefile  README.md  policy.yaml  pyproject.toml
.github/workflows/: mirror-to-gitlab.yml
docs/: architecture.md
scripts/: demo.py
src/mcp_gateway/: __init__.py  app.py  audit.py  config.py  gateway.py  policy.py  scanner.py  upstream.py
tests/: test_app.py  test_gateway_core.py  test_policy.py  test_scanner_llmguard.py  test_streamable_http.py  test_upstream_integration.py
